--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:node": "node server.js",
-    "start:python": "uvicorn server:app --host 0.0.0.0 --port 8000 --workers 5",
+    "start:python": "uvicorn server:app --host 0.0.0.0 --port 3000 --workers 5",
     "start:both": "concurrently \"npm run start:node\" \"npm run start:python\""
   },
   "keywords": [],
@@ -18,6 +18,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "groq-sdk": "^0.7.0",
     "mathjs": "^13.2.0",
     "openai": "^4.68.1"
   }
